-Fixing the overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,19 +28,23 @@ a {
     background: linear-gradient(-45deg, #1D1CE5, #4649FF, #7978FF, #C47AFF);
     background-size: 400% 400%;
     animation: gradient 5s ease infinite;
-    height: 95vh;
-    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
     margin: 0;
     /* border: 1px solid yellow; */
   }
-  
+
   @keyframes gradient {
     0% {
       background-position: 0% 50%;
     }
+
     50% {
       background-position: 100% 50%;
     }
+
     100% {
       background-position: 0% 50%;
     }
